@@ -5,6 +5,8 @@ CHANGES IN CUPS V1.3.10
 
 	- Documentation fixes (STR #2994, STR #2995, STR #3008, STR #3056,
 	  STR #3057)
+	- The scheduler no longer looks up the local hostname by default;
+	  turn on hostname lookups to restore the previous behavior.
 	- The scheduler did not always load MIME type rules correctly
 	  (STR #3059)
 	- The test page did not format correctly on A4 paper (STR #3060)
